# Wexi

./: CMakeLists.txt  Main.qml  README.md  converterbackend.cpp  converterbackend.h  icon.rc  main.cpp
